<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/nama_mhs"
            android:textStyle="bold"/> 
        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="2dip"
            android:textColor="#ffffff"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/npm_mhs"
            android:textStyle="bold"/> 
        <TextView
            android:id="@+id/npm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="2dip"
            android:textColor="#ffffff"
            android:textSize="14sp"/>        
        
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/sem_khs"
            android:textStyle="bold"/> 
        <TextView
            android:id="@+id/semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="2dip"
            android:textColor="#ffffff"
            android:textSize="14sp"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/mk_khs"
            android:textStyle="bold"/>        
        <TextView
            android:id="@+id/nama_mk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="2dip"
            android:textColor="#ffffff"
            android:textSize="14sp"/>
            
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/nilai"
            android:textStyle="bold"/>         
        <TextView
            android:id="@+id/nilai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="2dip"
            android:textColor="#ffffff"
            android:textSize="14sp"/>
    
</LinearLayout>