<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingLeft="10dp"
        android:paddingRight="5dp">


    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/nama_mhs"
            android:textStyle="bold" />    
    	<TextView
    	    android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="1dip"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="italic" />   
      

    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/npm_mhs"
            android:textStyle="bold" />      	
    	<TextView
            android:id="@+id/npm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="1dip"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="italic"/> 
            
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/alamat_mhs"
            android:textStyle="bold" />      	
    	<TextView
    	    android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="1dip"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="italic" />         

    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/jk"
            android:textStyle="bold" />      	
    	<TextView
    	    android:id="@+id/jk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="1dip"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="italic" /> 
    
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/nope_mhs"
            android:textStyle="bold" />      	
    	<TextView
    	    android:id="@+id/nope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="1dip"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="italic" />  
            
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dip"
            android:paddingTop="6dip"
            android:textColor="#dc6800"
            android:textSize="16sp"
            android:text="@string/angkatan"
            android:textStyle="bold" />    
  
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >    	
    		
    	<TextView
    	    android:id="@+id/angkatan"
    	    android:layout_width="52dp"
    	    android:layout_height="wrap_content"
    	    android:paddingBottom="2dip"
    	    android:paddingTop="1dip"
    	    android:textColor="#ffffff"
    	    android:textSize="14sp"
    	    android:textStyle="italic" />
          
    	<TextView
    	    android:id="@+id/kls"
    	    android:layout_width="50dp"
    	    android:layout_height="wrap_content"
    	    android:paddingBottom="2dip"
    	    android:paddingTop="1dip"
    	    android:textColor="#ffffff"
    	    android:textSize="14sp"
    	    android:textStyle="italic" />

    	</LinearLayout>
    	
</LinearLayout>